--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
                     </div>
                 </div>
                 <div class="home-visual">
-                    <div id="nn-container" class="neural-network">
-                        <!-- SVG will be injected here by main.js -->
-                    </div>
+                    <img src="assets/robot.png" alt="AI Robot" class="robot-img">
                 </div>
             </div>
         </section>
